# opencode-tauri

./: .env.example  .gitignore  .gitmodules  CRITICAL_OPERATING_CONSTRAINTS.md  Cargo.toml  DOCUMENTATION_GUIDE.md  EGUI_FEATURE_AUDIT.md  EfficientPromptWorkflow.md  NEXT_SESSION_PROMPT.md  PROTO_SCHEMA.md  README.md  SESSION_PLAN.md  SESSION_PLAN_FEATURE_BASED_FINAL.md  SESSION_PLAN_v2.md  Session_10_Plan.md  Session_11_Plan.md  Session_6.5_Plan.md  Session_6_Plan.md  Session_7_Plan.md  Session_8A_Plan.md  Session_8B_Plan.md  Session_9_Plan.md  session_10_prod_plan.md  session_11_prod_plan.md  session_12_plan.md  session_12_prod_plan.md  session_12_prod_plan_v2.md  session_13_prod_plan.md  session_14_plan.md  session_14_prod_plan.md  session_8B_02_plan.md  session_9_prod_plan.md
apps/desktop/opencode/: Cargo.toml  tauri.conf.json
apps/desktop/opencode/config/: models.toml
apps/desktop/opencode/frontend/: Opencode.staticwebassets.endpoints.json
apps/desktop/opencode/frontend/wwwroot/: index.html
apps/desktop/opencode/icons/: icon.icns
apps/desktop/opencode/integration_tests/: server.rs
apps/desktop/opencode/src/: error.rs  ipc_config.rs  lib.rs  logger.rs  main.rs  state.rs
apps/desktop/opencode/src/commands/: server.rs
apps/desktop/opencode/src/tauri_commands/: ipc_config_response.rs  mod.rs
apps/desktop/opencode/src/tests/: error.rs  logger.rs  mod.rs
backend/client-core/: Cargo.toml  build.rs  opencode_fields.toml
backend/client-core/integration_tests/: mod.rs
backend/client-core/integration_tests/discovery/: mod.rs  process.rs  spawn.rs
backend/client-core/integration_tests/error/: discovery.rs  spawn.rs
backend/client-core/integration_tests/ipc/: helpers.rs  ipc.rs  mod.rs
backend/client-core/integration_tests/ipc_tests/: helpers.rs  ipc.rs
backend/client-core/src/: field_normalizer.rs  lib.rs  proto.rs
backend/client-core/src/auth_sync/: mod.rs  oauth.rs  paths.rs  validation.rs
backend/client-core/src/config/: mod.rs  models.rs
backend/client-core/src/discovery/: mod.rs  process.rs  spawn.rs
backend/client-core/src/error/: auth_sync.rs  config.rs  discovery.rs  ipc.rs  mod.rs  opencode_client.rs  spawn.rs  ws.rs
backend/client-core/src/ipc/: config_state.rs  connection_state.rs  handle.rs  mod.rs  server.rs  state.rs
backend/client-core/src/opencode_client/: mod.rs
backend/client-core/src/tests/: field_normalizer.rs  mod.rs
backend/client-core/src/tests/discovery/: process.rs  spawn.rs
backend/client-core/src/tests/error/: discovery.rs  mod.rs  spawn.rs
common/: Cargo.toml
common/src/: http_status.rs  lib.rs  redacted_key.rs
common/src/error/: mod.rs  redact_error.rs
docs/: ARCHITECTURE.md  EGUI_ARCHITECTURE.md
docs/adr/: 0001-tauri-blazor-desktop-client.md  0002-thin-tauri-layer-principle.md  0003-websocket-protobuf-ipc.md  0004-json-field-name-normalization.md  NO_CUSTOM_JAVASCRIPT_POLICY.md  README.md  template.md
docs/proto/: 01-model.md  02-provider.md  03-auth.md  04-session.md  05-message.md  06-tool.md  07-agent.md  08-event.md  09-opencode.md  NEXT_SESSION_PROMPT.md  README.md  SCHEMA_DEVELOPMENT_PROCESS.md  SESSION_4_SCHEMA_PROMPT_ARCHIVE.md
frontend/desktop/: Desktop.sln
frontend/desktop/Opencode.Tests/: Opencode.Tests.csproj  _Imports.razor
frontend/desktop/Opencode.Tests/Services/: ConfigModelsTests.cs  ConfigServiceTests.cs  RetryPolicyTests.cs  ServerServiceTests.cs
frontend/desktop/opencode/: Opencode.csproj  Program.cs  _Imports.razor
frontend/desktop/opencode/Components/: AuthSection.razor  ChatInput.razor  ChatInput.razor.css  MessageBubble.razor  MessageBubble.razor.css  MessageList.razor  MessageList.razor.css  ModelSelector.razor  ModelsSection.razor  ProviderBadgeRow.razor  ServerSection.razor  SettingsModal.razor  TypingIndicator.razor  TypingIndicator.razor.css
frontend/desktop/opencode/Extensions/: IpcAuthSyncResponseExtensions.cs
frontend/desktop/opencode/Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css
frontend/desktop/opencode/Models/: ChatMessage.cs  MessageStatus.cs
frontend/desktop/opencode/Pages/: Chat.razor  Chat.razor.css  Home.razor
frontend/desktop/opencode/Services/: AuthSyncMetrics.cs  AuthSyncService.cs  ChatErrorMessages.cs  ChatInputSanitizer.cs  ChatMetrics.cs  ChatOptions.cs  ChatStateService.cs  ConfigModel.cs  ConfigService.cs  ConfigState.cs  ConnectionState.cs  IChatMetrics.cs  IChatOptions.cs  IChatStateService.cs  IConfigService.cs  IIpcClient.cs  IRetryPolicy.cs  IServerService.cs  IpcClient.cs  IpcClientMetrics.cs  IpcClientOptions.cs  IpcConfigService.cs  RetryPolicy.cs  RetryPolicyOptions.cs  ServerErrorMessages.cs  ServerService.cs  TauriCommands.cs  TauriConstants.cs
frontend/desktop/opencode/Services/Exceptions/: IpcException.cs  ServerOperationException.cs
frontend/desktop/opencode/wwwroot/: index.html
models/: Cargo.toml  build.rs
models/src/: lib.rs
models/src/error/: error_location.rs  mod.rs  model_error.rs
models/src/server_info/: builder.rs  info.rs
models/src/tests/: error_location.rs  mod.rs
models/src/tests/server_info/: builder.rs
proto/: ipc.proto  oc_agent.proto  oc_auth.proto  oc_event.proto  oc_message.proto  oc_message_error.proto  oc_message_part.proto  oc_model.proto  oc_provider.proto  oc_session.proto  oc_tool.proto  server.proto
