[workspace]
members = [
    "apps/desktop/opencode",
    "backend/client-core",
    "models"
]

resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process"] }
serde_json = { version = "1.0.148" }
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
sysinfo = { version = "0.37.2" }
netstat2 = { version = "0.11.2" }
thiserror = { version = "2.0.17" }
regex = { version = "1.12.2"}
log = { version = "0.4.29" }
fern = { version = "0.7.1", features = ["colored"] }
humantime = { version = "2.3.0" }
backoff = { version = "0.4.0" }
const_format = { version = "0.2.35" }
tauri = { version = "2.9.5" }
tauri-build = { version = "2.5.3", features = [] }
prost = { version = "0.14.1" }
prost-build = { version = "0.14.1" }
tokio-tungstenite = { version = "0.28.0" }
futures-util = { version = "0.3.31" }
uuid = { version = "1.19.0", features = ["v4"] }
url = { version = "2.5.8" }

models = { path = "models" }
client-core = { path = "backend/client-core" }
