[package]
name = "client-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }
netstat2 = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
backoff = { workspace = true }
const_format = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }

common = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
wiremocket = { workspace = true }


[[test]]
name = "integration_tests"
path = "integration_tests/mod.rs"

[build-dependencies]
prost-build = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
prost-wkt-build = { workspace = true }