[package]
name = "opencode"
version = "0.1.0"
edition = "2024"

[lib]
name = "opencode"
path = "src/lib.rs"

[[bin]]
name = "opencode"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }

# Workspace dependencies
client-core = { workspace = true }
common = { workspace = true }

[[test]]
name = "integration_tests"
path = "integration_tests/mod.rs"

[build-dependencies]
tauri-build = { workspace = true }
